testsuite/bsc.interra/messages/ENoNF/ENoNF1.bs.bsc-vcomp-out.expected
checking package dependencies
compiling ENoNF1.bs
code generation for mkENoNF1 starts
Error: "Prelude.bs", line 1511, column 13: (G0013)
  Compile time expression did not evaluate:
  Type: Prelude.String
  PrimBitToString (.Prelude.get ·666 y_1)

